# YAMyges

./: .gitignore  README.md
.github/workflows/: rust_backend.yml
services/backend/: .env.example  Cargo.toml
services/backend/src/: main.rs
services/backend/src/cli/: calendar.rs  courses.rs  login.rs  mod.rs
services/backend/src/kordis/: mod.rs
services/backend/src/models/: agenda.rs  agenda_course.rs  mod.rs
