[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7.1"
base64 = "0.21.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = "0.4.24"
